compiler-core/src/parse/snapshots/rakun_core__parse__tests__function_inside_a_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord Wibble {\n  fn wobble() {}\n}\n"
---
----- SOURCE CODE

record Wibble {
  fn wobble() {}
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:3
  │
3 │   fn wobble() {}
  │   ^^ I was not expecting this

Found the keyword `fn`, expected one of: 
- `}`
- a record constructor
Hint: Rakun is not an object oriented programming language so
functions are declared separately from types.
